examples/test/testpolicy11119.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11119
  namespace: namespace219
spec:
  podSelector:
    matchLabels:
      key42: value39
      key27: value10
      key18: value26
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key9: value18
          key47: value31
      podSelector:
        matchLabels:
          key33: value35
          key6: value43
          key47: value47
